@@ -23,6 +23,7 @@
 - Allow repository load in background
 - Allow reordering of playlist tabs
 - Cover navigator window should be resizable
+- New lyric engine using www.winampcn.com (Patch by Taylor Tang)
 - INTERNAL: Avoid unnecessary refresh view operations
 - INTERNAL: Share actions between play list and navigation tree and table
 - INTERNAL: Refactoring of play list
